# vcpu

./: CMakeLists.txt
src/: threadstest.c  vcpu.c
src/core/: core.c  core.h  core_components.h  core_risc16.c  core_risc16.h
src/core/components/: component.c  component.h  counter.c  counter.h  memory.h  register.c  register.h
src/cpu/: cpu.c  cpu.h
